--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,79 @@
-<header class="header-section">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-6">
-        <nav class="nav-menu">
-          <ul>
-            <li><a [routerLink]="['/restaurant-list']">Restaurant</a></li>
-            <li><a [routerLink]="['/plat-list']">Plats</a></li>
-            <li><a [routerLink]="['/favorites']">Favorite Plans</a></li>
-          </ul>
-        </nav>
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Body Smith</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="/product">Products</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/sessions">Sessions</a>
+                </li>
+            </ul>
+
+     
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/panier">
+                        <i class="bi bi-cart"></i>
+                        Panier
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/add">
+                        <i class="bi bi-cart"></i> 
+                       add product 
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav> -->
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Body Smith</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/product">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/coaches">Coaches</a> <!-- Lien pour Coaches -->
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/sessions">Sessions</a>
+        </li>
+        </ul>
+  
+        <!-- Cart icon and badge -->
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/panier">
+              <i class="bi bi-cart"></i> <!-- Icone de panier -->
+              Panier <!-- Texte du lien -->
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/add">
+              <i class="bi bi-cart"></i> <!-- Icone de panier -->
+              add product <!-- Texte du lien -->
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-  </div>
-</header>
+  </nav>
+  
