--- a/src/app/product/products-list/products-list.component.css
+++ b/src/app/product/products-list/products-list.component.css
@@ -19,13 +19,7 @@ body {
   gap: 20px;
   margin-bottom: 20px;
   }
-  
-  .filter-section div {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  }
-  
+
   label {
   font-weight: bold;
   margin-bottom: 5px;
@@ -183,6 +177,18 @@ body {
   z-index: 1000;
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
   }
+
+  .strong2{
+    color : red;
+  }
+  
+  .strong1{
+    color : rgb(17, 165, 17);
+  }
+
+  .button-reset{
+    position: flex;
+  }
   
   .popup-notification.show {
   display: block;
@@ -237,8 +243,9 @@ body {
   }
   .product-image {
   width: 100%;
-  height: auto;
   margin-bottom: 10px;
+  width: 300px;
+  height: 300px;
   }
   /* products-list.component.css */
 
