--- a/src/app/addproduct/addproduct.component.html
+++ b/src/app/addproduct/addproduct.component.html
@@ -1,111 +1,99 @@
-<form [formGroup]="productForm" (ngSubmit)="addProduct()">
-    <!-- Title Input -->
-    <div class="mb-3">
-      <label for="title" class="form-label">Title:</label>
-      <input type="text" id="title" class="form-control" formControlName="title">
-      <!-- Error Messages for Title -->
-      <div *ngIf="productForm.get('title')?.invalid && (productForm.get('title')?.touched || productForm.get('title')?.dirty)">
-        <div *ngIf="productForm.get('title')!.errors!['required']" class="text-danger">
-          Title is required.
-        </div>
-        <div *ngIf="productForm.get('title')!.errors!['minlength']" class="text-danger">
-          Title must be at least {{ productForm.get('title')!.errors!['minlength'].requiredLength }} characters long.
-        </div>
-        <div *ngIf="productForm.get('title')!.errors!['specialCharacters']" class="text-danger">
-          Title cannot contain special characters.
-        </div>
-      </div>
-    </div>
-  
-    <!-- Description Textarea -->
-    <div class="mb-3">
-      <label for="description" class="form-label">Description:</label>
-      <textarea id="description" class="form-control" formControlName="description"></textarea>
-      <!-- Error Messages for Description -->
-      <div *ngIf="productForm.get('description')?.invalid && (productForm.get('description')?.touched || productForm.get('description')?.dirty)">
-        <div *ngIf="productForm.get('description')!.errors!['required']" class="text-danger">
-          Description is required.
-        </div>
-        <div *ngIf="productForm.get('description')!.errors!['minlength']" class="text-danger">
-          Description must be at least {{ productForm.get('description')!.errors!['minlength'].requiredLength }} characters long.
-        </div>
-        <div *ngIf="productForm.get('description')!.errors!['specialCharacters']" class="text-danger">
-          Description cannot contain special characters.
-        </div>
-      </div>
-    </div>
-  
-    <!-- Price Input -->
-    <div class="mb-3">
-      <label for="price" class="form-label">Price:</label>
-      <input type="number" id="price" class="form-control" formControlName="price">
-      <!-- Error Messages for Price -->
-      <div *ngIf="productForm.get('price')?.invalid && (productForm.get('price')?.touched || productForm.get('price')?.dirty)">
-        <div *ngIf="productForm.get('price')!.errors!['required']" class="text-danger">
-          Price is required.
-        </div>
-        <div *ngIf="productForm.get('price')!.errors!['pattern']" class="text-danger">
-          Invalid price format. Must be a positive number with up to two decimal places.
-        </div>
-        <div *ngIf="productForm.get('price')!.errors!['min']" class="text-danger">
-          Price must be greater than 0.
-        </div>
-      </div>
-    </div>
-  
-    <!-- Image Upload -->
-    <div class="mb-3">
-      <label for="imageUrl" class="form-label">Image:</label>
-      <input type="file" id="imageUrl" class="form-control" (change)="onFileSelected($event)">
-      <!-- Error Messages for Image -->
-      <div *ngIf="productForm.get('imageUrl')?.invalid && (productForm.get('imageUrl')?.touched || productForm.get('imageUrl')?.dirty)">
-        <div *ngIf="productForm.get('imageUrl')!.errors!['required']" class="text-danger">
-          Image is required.
-        </div>
-      </div>
-    </div>
-  
-    <!-- Quantity Input -->
-    <div class="mb-3">
-      <label for="quantity" class="form-label">Quantity:</label>
-      <input type="number" id="quantity" class="form-control" formControlName="quantity">
-      <!-- Error Messages for Quantity -->
-      <div *ngIf="productForm.get('quantity')?.invalid && (productForm.get('quantity')?.touched || productForm.get('quantity')?.dirty)">
-        <div *ngIf="productForm.get('quantity')!.errors!['required']" class="text-danger">
-          Quantity is required.
-        </div>
-        <div *ngIf="productForm.get('quantity')!.errors!['pattern']" class="text-danger">
-          Invalid quantity format. Must be a positive whole number.
-        </div>
-        <div *ngIf="productForm.get('quantity')!.errors!['min']" class="text-danger">
-          Quantity must be greater than 0.
-        </div>
-      </div>
-    </div>
-  
-    <!-- Category Dropdown -->
-    <div class="mb-3">
-      <label for="categoryName" class="form-label">Category:</label>
-      <select id="categoryName" class="form-select" formControlName="idCategorie">
-        <option value="">Select a category...</option>
-        <option *ngFor="let category of categories" [value]="category._id">
-          {{ category.nom }}
-        </option>
-      </select>
-      <!-- Error Messages for Category -->
-      <div *ngIf="productForm.get('categoryName')?.invalid && (productForm.get('categoryName')?.touched || productForm.get('categoryName')?.dirty)">
-        <div *ngIf="productForm.get('categoryName')!.errors!['required']" class="text-danger">
-          Category is required.
-        </div>
-      </div>
-    </div>
-  
-    <!-- Submit Button -->
-    <button type="submit" class="btn btn-primary" [disabled]="productForm.invalid">Add Product</button>
-    
 
-<!-- src/app/panier/panier.component.html -->
-<button (click)="navigateToEdit()" class="btn btn-primary">Go to Edit</button>
 
-</form>
-  
+<!--button (click)="navigateToEdit()" class="btn btn-primary">Go to Edit</button>
+
+</form!-->
+
+<div class="formbold-main-wrapper">
+  <div class="formbold-form-wrapper">
+    <form [formGroup]="productForm" (ngSubmit)="addProduct()">
+      <div class="card">
+      <img class="formbold-img" [hidden]="imgUrl === null" [src]="imgUrl">
+      <div class="formbold-mb-3">
+        <label for="age" class="formbold-form-label"> Title </label>
+        <input
+          type="text"
+          name="titre"
+          id="titre"
+          placeholder="Title"
+          class="formbold-form-input"
+          formControlName="title"
+        />
+      </div>
+
+      <div class="formbold-mb-3">
+        <label for="address" class="formbold-form-label"> Price </label>
+
+        <input
+          type="number"
+          name="prix"
+          id="prix"
+          placeholder="Price"
+          class="formbold-form-input formbold-mb-3"
+          formControlName="price"
+          step="0.01"
+          min="0"
+        />
+
+        <label for="address2" class="formbold-form-label"> Quantity </label>
+
+        <input
+          type="number"
+          name="quantite"
+          id="quantite"
+          placeholder="Quantity"
+          class="formbold-form-input"
+          formControlName="quantity"
+          min="0"
+        />
+      </div>
+
+      <div>
+        <label class="formbold-form-label">Category</label>
+        <select class="formbold-form-input" name="categorie" id="categorie" formControlName="idCategorie">
+          <option value="" class="formbold-form-input">Select a category...</option>
+          <option *ngFor="let category of categories" [value]="category._id">
+            {{ category.nom }}
+          </option>
+        </select>
+      </div>
+
+      <br>
+      <div class="formbold-mb-3">
+        <label for="message" class="formbold-form-label">Description</label>
+        <textarea
+          rows="6"
+          name="description"
+          id="description"
+          class="formbold-form-input"
+          formControlName="description"
+        ></textarea>
+      </div>
+
+      <div>
+        <label for="upload" class="formbold-input-label">
+          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_1670_1531)">
+          <path d="M12.3568 6.4644L7.64349 11.1786C7.5639 11.2554 7.50041 11.3474 7.45674 11.4491C7.41307 11.5507 7.39008 11.6601 7.38912 11.7707C7.38815 11.8814 7.40924 11.9911 7.45114 12.0935C7.49304 12.1959 7.55492 12.289 7.63316 12.3672C7.71141 12.4455 7.80445 12.5073 7.90686 12.5492C8.00928 12.5912 8.11901 12.6122 8.22966 12.6113C8.34031 12.6103 8.44966 12.5873 8.55133 12.5436C8.653 12.5 8.74495 12.4365 8.82182 12.3569L13.536 7.64356C14.0049 7.17468 14.2683 6.53875 14.2683 5.87565C14.2683 5.21255 14.0049 4.57661 13.536 4.10773C13.0671 3.63885 12.4312 3.37544 11.7681 3.37544C11.105 3.37544 10.469 3.63885 10.0002 4.10773L5.28599 8.8219C4.89105 9.20701 4.57652 9.6667 4.36062 10.1743C4.14473 10.6819 4.03178 11.2274 4.02832 11.779C4.02487 12.3306 4.13097 12.8774 4.34049 13.3877C4.55 13.8979 4.85876 14.3615 5.24884 14.7516C5.63892 15.1416 6.10256 15.4503 6.61287 15.6597C7.12318 15.8692 7.67 15.9752 8.2216 15.9717C8.77321 15.9681 9.31862 15.8551 9.82621 15.6391C10.3338 15.4232 10.7934 15.1086 11.1785 14.7136L15.8927 10.0002L17.071 11.1786L12.3568 15.8927C11.8151 16.4344 11.172 16.8641 10.4643 17.1573C9.75649 17.4505 8.99791 17.6014 8.23182 17.6014C7.46574 17.6014 6.70716 17.4505 5.99939 17.1573C5.29162 16.8641 4.64853 16.4344 4.10682 15.8927C3.56512 15.351 3.13542 14.7079 2.84225 14.0002C2.54908 13.2924 2.39819 12.5338 2.39819 11.7677C2.39819 11.0016 2.54908 10.2431 2.84225 9.5353C3.13542 8.82753 3.56512 8.18443 4.10682 7.64273L8.82182 2.9294C9.60767 2.17041 10.6602 1.75043 11.7527 1.75992C12.8451 1.76942 13.8902 2.20762 14.6627 2.98015C15.4353 3.75269 15.8735 4.79774 15.883 5.89023C15.8925 6.98271 15.4725 8.03522 14.7135 8.82106L10.0002 13.5369C9.76794 13.7691 9.49226 13.9532 9.18887 14.0788C8.88548 14.2045 8.56032 14.2691 8.23195 14.2691C7.90357 14.269 7.57843 14.2043 7.27507 14.0786C6.97171 13.9529 6.69607 13.7687 6.46391 13.5365C6.23174 13.3043 6.04759 13.0286 5.92196 12.7252C5.79633 12.4218 5.7317 12.0966 5.73173 11.7683C5.73177 11.4399 5.79649 11.1148 5.92219 10.8114C6.04788 10.508 6.2321 10.2324 6.46432 10.0002L11.1785 5.28606L12.3568 6.4644Z" fill="#07074D"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_1670_1531">
+          <rect width="20" height="20" fill="white"/>
+          </clipPath>
+          </defs>
+          </svg>
+            Add an image
+          <input hidden
+           type="file"
+           name="upload"
+           id="upload"
+           (change)="onFileSelected($event)">
+        </label>
+      </div>
+
+      <button type="submit" class="formbold-btn" [disabled]="productForm.invalid">Add</button>
+      <button type="reset" class="formbold-btn-cancel">Cancel</button>
+      </div>
+    </form>
+  </div>
+</div>
