--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -30,6 +30,14 @@
                     </a>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/categories">
+                        <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                       categories <!-- Texte du lien -->
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
