--- a/src/app/plat-list/plat-list.component.html
+++ b/src/app/plat-list/plat-list.component.html
@@ -68,7 +68,7 @@
       <img [src]="plat.imagePlat" alt="{{ plat.nomPlat }}" class="plat-image" />
       <div class="plat-info">
         <h3>{{ plat.nomPlat }}</h3>
-        <p><strong>Price:</strong> {{ plat.prixPlat }} USD</p>
+        <p><strong>Price:</strong> {{ plat.prixPlat }} TND</p>
         <p><strong>Calories:</strong> {{ plat.calories }}</p>
         <p><strong>Cuisine:</strong> {{ plat.cuisine }}</p>
         <p><strong>Category:</strong> {{ plat.categoriePlat }}</p>
@@ -101,7 +101,7 @@
         />
         <div class="plat-info">
           <h3>{{ combination.entree.nomPlat }}</h3>
-          <p><strong>Price:</strong> {{ combination.entree.prixPlat }} USD</p>
+          <p><strong>Price:</strong> {{ combination.entree.prixPlat }} TND</p>
           <p><strong>Calories:</strong> {{ combination.entree.calories }}</p>
           <p><strong>Cuisine:</strong> {{ combination.entree.cuisine }}</p>
           <p>
@@ -119,7 +119,7 @@
         <div class="plat-info">
           <h3>{{ combination.platPricipale.nomPlat }}</h3>
           <p>
-            <strong>Price:</strong> {{ combination.platPricipale.prixPlat }} USD
+            <strong>Price:</strong> {{ combination.platPricipale.prixPlat }} TND
           </p>
           <p>
             <strong>Calories:</strong> {{ combination.platPricipale.calories }}
@@ -142,7 +142,7 @@
         />
         <div class="plat-info">
           <h3>{{ combination.dessert.nomPlat }}</h3>
-          <p><strong>Price:</strong> {{ combination.dessert.prixPlat }} USD</p>
+          <p><strong>Price:</strong> {{ combination.dessert.prixPlat }} TND</p>
           <p><strong>Calories:</strong> {{ combination.dessert.calories }}</p>
           <p><strong>Cuisine:</strong> {{ combination.dessert.cuisine }}</p>
           <p>
