--- a/src/app/favorite-plans/favorite-plans.component.html
+++ b/src/app/favorite-plans/favorite-plans.component.html
@@ -1,22 +1,28 @@
-<div>
-  <h2>Favorites</h2>
+<div class="container">
+  <h2 class="section-title">Favorites</h2>
   <div class="plat-combination-card" *ngFor="let favorite of favorites">
     <h3>Total Calories: {{ favorite.totalCalories }}</h3>
 
     <!-- Loop over the plats array in each favorite -->
-    <div class="plat-card" *ngFor="let plat of favorite.plats">
-      <img [src]="plat.imagePlat" alt="{{ plat.nomPlat }}" class="plat-image" />
-      <div class="plat-info">
-        <h3>{{ plat.nomPlat }}</h3>
-        <p><strong>Price:</strong> {{ plat.prixPlat }} USD</p>
-        <p><strong>Calories:</strong> {{ plat.calories }}</p>
-        <p><strong>Cuisine:</strong> {{ plat.cuisine }}</p>
-        <p><strong>Category:</strong> {{ plat.categoriePlat }}</p>
+    <div class="plat-horizontal-line">
+      <div class="plat-card" *ngFor="let plat of favorite.plats">
+        <img
+          [src]="plat.imagePlat"
+          alt="{{ plat.nomPlat }}"
+          class="plat-image"
+        />
+        <div class="plat-info">
+          <h3>{{ plat.nomPlat }}</h3>
+          <p><strong>Price:</strong> {{ plat.prixPlat }} TND</p>
+          <p><strong>Calories:</strong> {{ plat.calories }}</p>
+          <p><strong>Cuisine:</strong> {{ plat.cuisine }}</p>
+          <p><strong>Category:</strong> {{ plat.categoriePlat }}</p>
+        </div>
       </div>
     </div>
 
     <!-- Button to remove favorite -->
-    <button (click)="removeFavorite(favorite._id)">
+    <button (click)="removeFavorite(favorite._id)" class="btn btn-clear">
       Remove from Favorites
     </button>
   </div>
