--- a/src/app/coaches-list/coaches-list.component.html
+++ b/src/app/coaches-list/coaches-list.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div *ngIf="piw">{{ coaches ? coaches[0] : ' ' }}</div>
 
 <div *ngIf="clicked && coaches && coaches.length !== 0">  
@@ -17,5 +17,77 @@
 </div>
 
 <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
+* -->
 
-<!-- Additional content for other scenarios -->
+<div *ngIf="piw">{{ coaches ? coaches[0] : ' ' }}</div>
+<!-- Team Section Begin -->
+<section class="team-section team-page spad">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <div class="team-title">
+                  <div class="section-title">
+                      <span>Our Team</span>
+                      <h2>TRAIN WITH EXPERTS</h2>
+                      <a href="/reservation" class="primary-btn btn-normal appoinment-btn">Appointment</a>
+                  </div>
+                  <div *ngIf="clicked && coaches && coaches.length !== 0">  
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Address</th>
+                            <th>Phone Number</th>
+                            <th>Speciality</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let coach of coaches">
+                            <td>{{ coach.firstName }}</td>
+                            <td>{{ coach.lastName }}</td>
+                            <td>{{ coach.adresse }}</td>
+                            <td>{{ coach.phoneNumber }}</td>
+                            <td>zid spécialité fl entité </td>
+                            
+                          </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
+                <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
+              </div>
+          </div>
+      </div>
+      
+  </div>
+</section>
+
+
+
+<!-- <div *ngIf="clicked && coaches && coaches.length !== 0">  
+    <table class="table">
+        <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Address</th>
+            <th>Phone Number</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let coach of coaches">
+            <td>{{ coach.firstName }}</td>
+            <td>{{ coach.lastName }}</td>
+            <td>{{ coach.adresse }}</td>
+            <td>{{ coach.phoneNumber }}</td>
+            
+          </tr>
+        </tbody>
+    </table>
+</div>
+
+<div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div> -->
+
+x
+<!-- Team Section End -->
