--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,79 +1,74 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Body Smith</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/product">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/sessions">Sessions</a>
-                </li>
-            </ul>
-
-     
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/panier">
-                        <i class="bi bi-cart"></i>
-                        Panier
-                    </a>
-                </li>
-            </ul>
-
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/add">
-                        <i class="bi bi-cart"></i> 
-                       add product 
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav> -->
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Body Smith</a>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+          <img src="./../assets/img/logo.png" alt="Logo"> 
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/product">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/coaches">Coaches</a> <!-- Lien pour Coaches -->
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/sessions">Sessions</a>
-        </li>
-        </ul>
-  
-        <!-- Cart icon and badge -->
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/panier">
-              <i class="bi bi-cart"></i> <!-- Icone de panier -->
-              Panier <!-- Texte du lien -->
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/add">
-              <i class="bi bi-cart"></i> <!-- Icone de panier -->
-              add product <!-- Texte du lien -->
-            </a>
-          </li>
-        </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                
+                  <a class="nav-link" routerLink="/product">Products</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" routerLink="/coaches">Coaches</a> 
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link"  routerLink="/sessions">Sessions</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"  routerLink="/add">AddProduct</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"  routerLink="/reserver">RESERVER</a>
+            </li>
+              <li class="nav-item">
+                  <a class="nav-link"routerLink="/panier">
+                    <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                    Panier <!-- Texte du lien -->
+                  </a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Pages</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+              </li>
+          </ul>
+
+
+          <div id="mobile-menu-wrap"></div>
+          <div class="canvas-social">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-youtube-play"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+          </div>
+     
+          <!-- Social media icons -->
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-facebook"></i></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-twitter"></i></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-youtube"></i></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
+              </li>
+          </ul>
       </div>
-    </div>
-  </nav>
-  
+  </div>
+</nav>
