--- a/src/app/coaches-list/coaches-list.component.html
+++ b/src/app/coaches-list/coaches-list.component.html
@@ -29,7 +29,7 @@
                   <div class="section-title">
                       <span>Our Team</span>
                       <h2>TRAIN WITH EXPERTS</h2>
-                      <a href="/reservation" class="primary-btn btn-normal appoinment-btn">Appointment</a>
+                      <a href="/reserver" class="primary-btn btn-normal appoinment-btn">Appointment</a>
                   </div>
                   <div *ngIf="clicked && coaches && coaches.length !== 0">  
                     <table class="table">
